# tcg-rs

./: .gitignore  AARCH64_GUEST_COMPARISON.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh.md  SPEC2006INT_AOT_RESULTS.md  TEAM.md  aarch64-aot-optimization-analysis.md  aot.O2.ll  aot.o.ll  coremark-aarch64  coremark-riscv64  hello.c  run-spec2006int-aot.sh  run-spec2006int-jit.sh  test-spec2006-jit.sh
.cargo/: config.toml
backend/: Cargo.toml
difftest/: Cargo.toml  README.md
docs/: aarch64-guest.md
exec/: Cargo.toml
frontend/: build.rs
linux-user/: Cargo.toml
linux-user/src/: elf.rs  guest_space.rs  lib.rs  loader.rs  main.rs  main_aarch64.rs  syscall.rs  syscall_aarch64.rs  vdso.rs
linux-user/vdso/aarch64/: build.sh  linux-vdso.so.1  vdso.S  vdso.ver
reports/: 2026-03-02-coremark-aot-aa64-vs-rv64-analysis-and-tuning.md
spec-logs/: aarch64.Ofast.tcgrs.20260320165734.aot.cfg  aarch64.Ofast.tcgrs.20260320165734.jit.cfg  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657a  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657b  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657c  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657d  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1657e  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1658  aarch64.Ofast.tcgrs.20260320165734.jit.cfg.2026-03-20_1658a  aarch64.Ofast.tcgrs.20260320165734.profile.cfg  (+21 more)
tools/aot/: Cargo.toml  build.rs
tools/aot/helpers/: aarch64_helpers.c
tools/aot/src/: main.rs
(+66 files in other folders)
