[package]
name = "tcg-linux-user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcg-riscv64"
path = "src/main.rs"

[[bin]]
name = "tcg-aarch64"
path = "src/main_aarch64.rs"

[features]
llvm = ["tcg-backend/llvm", "tcg-exec/llvm"]

[dependencies]
libc = "0.2"
tcg-core = { path = "../core" }
tcg-backend = { path = "../backend" }
tcg-frontend = { path = "../frontend" }
tcg-exec = { path = "../exec" }
